# sparkdoctor

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_rule.yml
.github/workflows/: ci.yml  publish.yml
core/: rules.yaml
core/rules/: sdk001.yaml  sdk001_hardcoded_repartition.yaml  sdk002_collect_without_limit.yaml  sdk003.yaml  sdk003_count_emptiness_check.yaml  sdk004_withcolumn_in_loop.yaml  sdk005.yaml  sdk005_python_udf.yaml  sdk006.yaml  sdk006_repartition_to_one.yaml  sdk007_unpersisted_cache.yaml  sdk008_cross_df_column_ref.yaml  sdk009_chain_length.yaml  sdk011.yaml  sdk011_magic_literal.yaml  sdk012.yaml  sdk013_rdd_api_usage.yaml  sdk014.yaml  sdk015_hardcoded_shuffle_partitions.yaml  sdk016.yaml  sdk016_cross_join.yaml  sdk017.yaml  sdk018.yaml  sdk018_inconsistent_column_ref.yaml  sdk019_infer_schema.yaml  sdk020_drop_before_overwrite.yaml  sdk023_show_in_production.yaml  sdk024.yaml  sdk025_union_by_position.yaml  sdk026_fstring_sql.yaml  sdk027.yaml  sdk027_orderby_before_write.yaml  sdk028_distinct_count.yaml  sdk029_write_without_mode.yaml  sdk030_redundant_sort.yaml  sdk031.yaml  sdk031_collect_in_loop.yaml
docs/contributing/: writing-a-rule.md
plugins/gradle/: README.md
plugins/maven/: README.md
plugins/sbt/: README.md
sparkdoctor/: __init__.py  config.py
sparkdoctor/cli/: main.py
sparkdoctor/lint/: base.py  engine.py  runner.py
sparkdoctor/output/: json_output.py  terminal.py
sparkdoctor/rules/: _helpers.py  registry.py  sdk001_hardcoded_repartition.py  sdk002_collect_without_limit.py  sdk003_count_as_emptiness_check.py  sdk004_withcolumn_in_loop.py  sdk005_python_udf.py  sdk006_repartition_to_one.py  sdk007_unpersisted_cache.py  sdk008_cross_df_column_ref.py  sdk009_chain_length.py  sdk011_magic_literal.py  sdk012_topandas_without_limit.py  sdk013_rdd_api_usage.py  sdk014_aqe_disabled.py  sdk015_hardcoded_shuffle_partitions.py  sdk016_cross_join.py  sdk017_select_star.py  sdk018_inconsistent_column_ref.py  sdk019_infer_schema.py  sdk020_drop_before_overwrite.py  sdk023_show_in_production.py  sdk024_streaming_without_schema.py  sdk025_union_by_position.py  sdk026_fstring_sql.py  sdk027_orderby_before_write.py  sdk031_collect_in_loop.py
tests/: test_cli.py  test_config.py  test_fixtures.py  test_plugin_system.py  test_runner.py
tests/corpus/: chain_length.py  column_ref_style.py  config_patterns.py  conftest.py  count_emptiness.py  cross_df_ref.py  drop_before_overwrite.py  fstring_sql.py  infer_schema.py  magic_literal.py  orderby_before_write.py  rdd_usage.py  repartition_patterns.py  show_in_production.py  test_corpus.py  withcolumn_loop.py
tests/fixtures/: bad_job.py  clean_job.py
tests/rules/: test_sdk001.py  test_sdk002.py  test_sdk003.py  test_sdk005.py  test_sdk006.py  test_sdk007.py  test_sdk008.py  test_sdk009.py  test_sdk011.py  test_sdk012.py  test_sdk013.py  test_sdk015.py  test_sdk017.py  test_sdk018.py  test_sdk019.py  test_sdk020.py  test_sdk023.py  test_sdk024.py  test_sdk025.py  test_sdk027.py  test_sdk031.py
