[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkdoctor"
version = "0.1.0"
description = "A PySpark performance linter — ESLint for PySpark"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["pyspark", "spark", "linter", "performance", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
sparkdoctor = "sparkdoctor.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sparkdoctor"
Issues = "https://github.com/yourusername/sparkdoctor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.hatch.build.targets.wheel]
packages = ["sparkdoctor"]
