[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkdoctor"
version = "0.1.7"
description = "A Spark performance linter"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["pyspark", "spark", "linter", "performance", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
sparkdoctor = "sparkdoctor.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/SrujithPoondla/sparkdoctor"
Repository = "https://github.com/SrujithPoondla/sparkdoctor"
Issues = "https://github.com/SrujithPoondla/sparkdoctor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default arg (required by typer)
    "SIM102", # nested ifs (readability preference for AST code)
    "SIM103", # return condition directly (readability preference)
    "SIM108", # use ternary operator (readability preference)
    "SIM110", # use any() instead of loop (readability preference)
    "UP036",  # version block outdated (kept for compatibility)
    "UP045",  # X | None syntax (typer needs Optional for Python 3.9)
]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["E402"]  # test fixtures have intentional import ordering

[tool.ruff.lint.isort]
known-first-party = ["sparkdoctor"]

[tool.hatch.build.targets.wheel]
packages = ["sparkdoctor"]
